// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain a proper content (filter not active tags) 1`] = `
<cert-card__field-val
  data={
    Array [
      Object {
        "is_active": true,
        "name": "Office.8021X.Search",
        "source": "filters",
      },
      Object {
        "is_active": true,
        "name": "Office.8021X.Staff",
        "source": "filters",
      },
      Object {
        "is_active": true,
        "name": "Office.WiFi.Yandex",
        "source": "filters",
      },
      Object {
        "is_active": false,
        "name": "Office.WiFi.PDAS",
        "source": "cert_type",
      },
      Object {
        "is_active": false,
        "name": "Office.VPN",
        "source": "cert_type",
      },
    ]
  }
  type="tags"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_tags"
    data-lego="react"
    style={Object {}}
  >
    Office.8021X.Search, Office.8021X.Staff, Office.WiFi.Yandex
  </span>
</cert-card__field-val>
`;

exports[`should print a hyphen in case of empty list 1`] = `
<cert-card__field-val
  data={Array []}
  type="tags"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_tags"
    data-lego="react"
    style={Object {}}
  >
    —
  </span>
</cert-card__field-val>
`;
